Dokončení úkolu, vytvoření fukncí pro mazání, get API, zobrazení chyb a výsledků.

--- a/L09_weather-api/playground/weather.html
+++ b/L09_weather-api/playground/weather.html
@@ -3,13 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="weather.css">
+    <title>Počasí online</title>
 </head>
 <body>
-    <label>Zadání města</label>
-    <input type="text" id= "text" name="text" />
-
-    <button> Vyhledat počasí</button>
+    
+        <div class="weather-card">
+            <form class="weather-input">
+                <label for="cityName">Počasí pro každý den</label>
+                <input type="text" id= "cityName" name="cityName" placeholder="Zadejte města..." required/>
+                <button id="submit" type="button"> Vyhledat počasí</button>
+            </form>
+        </div>
+       
+    <script src="weather.js"></script>
 </body>
 </html>
 
